--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.NavGlobal {
+  height: 50px;
+  background-color: #424242;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+}
+
+.NavGlobal a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.Contenedor-cabecera {
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
+}
